Fixed a big z-index problem in login page

--- a/src/www/static/css/Procurement.css
+++ b/src/www/static/css/Procurement.css
@@ -6,6 +6,7 @@
 
 .navbar {
     background-color: #C75B12 !important;
+    z-index: 1;
 }
 
 .errbar {
@@ -65,7 +66,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
   position: fixed;
   overflow: auto;
   background-color: rgb(0,0,0,0.7);
@@ -81,6 +81,7 @@
   position: relative;
   margin: auto;
   color: black;
+  z-index: 30;
 }
 
 .login-content > input,
